# PhysicsSimCPP

./: CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: fragmentShader.glsl  gridfrag.glsl  pfShader.glsl  pvShader.glsl
src/: Camera.cpp  Camera.h  Grid.cpp  Grid.h  Planet.cpp  Planet.h  Shader.h  Star.cpp  Star.h  main.cpp
